# product_category_prediction

./: .gitignore  README.md  pyproject.toml
product_prediction/: __init__.py  definitions.py  scraping.py  utils.py
product_prediction/machine_learning/: data.py  text.py  utils.py  vision_model.py
product_prediction/prediction_service/: prediction_server.py  shoe_category_prediction_pb2.py  shoe_category_prediction_pb2.pyi  shoe_category_prediction_pb2_grpc.py
protos/: shoe_category_prediction.proto
scripts/: create_ml_dataset.py  data_analysis.ipynb  extract_intersport_products.py  generate_python_proto_files.bash  run_category_prediction_server.py  run_embedding_visualization_app.py  test_category_prediction_server.py  train_text_model.py  train_vision_model.py
